--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".viewCharacters">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler"
+        android:id="@+id/rvCharacters"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
