--- a/app/src/main/res/layout/activity_view_images_character.xml
+++ b/app/src/main/res/layout/activity_view_images_character.xml
@@ -9,19 +9,27 @@
 
     <ImageView
         android:id="@+id/image1"
-        android:layout_width="80dp"
-        android:layout_height="80dp" />
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="80dp"
+        android:src="@drawable/load"/>
     <ImageView
         android:id="@+id/image2"
-        android:layout_width="80dp"
-        android:layout_height="80dp" />
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="80dp"
+        android:src="@drawable/load"/>
     <ImageView
         android:id="@+id/image3"
-        android:layout_width="80dp"
-        android:layout_height="80dp" />
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="80dp"
+        android:src="@drawable/load"/>
     <ImageView
         android:id="@+id/image4"
-        android:layout_width="80dp"
-        android:layout_height="80dp" />
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="80dp"
+        android:src="@drawable/load"/>
 
 </LinearLayout>
