--- a/app/src/main/res/layout/design_item__recycler.xml
+++ b/app/src/main/res/layout/design_item__recycler.xml
@@ -6,24 +6,27 @@
 
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:id="@+id/llcharacter"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/pokemonImage"
+            android:id="@+id/pokemonImage1"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center"
-            android:src="@drawable/pokemon1"
+            android:src="@drawable/load"
             />
         <TextView
-            android:id="@+id/pokemonName"
+            android:id="@+id/pokemonName1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="Pokemon"/>
 
         </LinearLayout>
+
+
 
 </LinearLayout>
