--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,14 +17,14 @@
         <include layout="@layout/item_error_conection">
 
         </include>
-        <android.support.v7.widget.RecyclerView
+        <com.mindorks.placeholderview.PlaceHolderView
             android:id="@+id/rvCharacters"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
 
 
-        </android.support.v7.widget.RecyclerView>
+        </com.mindorks.placeholderview.PlaceHolderView>
 
 
 
